--- a/web/index.html
+++ b/web/index.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8" />
         <title>Title of the document</title>
         <link rel="icon" type="image/png" href="favicon.png" />
-        <link rel="stylesheet" type="text/css" href="https://fonts.cdnfonts.com/css/jungle-adventurer" />
-        <link rel="stylesheet" type="text/css" href="main.css" />
+        <link rel="preload" href="./assets/fonts/JungleAdventurer.ttf" as="font" type="font/ttf" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="assets/css/main.css" />
     </head>
 
     <body class="dark">
